# ecs_c_learning

./: CMakeLists.txt  arena.c  arena.h  combat_system.c  combat_system.h  components.h  death_queue.c  death_queue.h  entity.h  entity_factory.c  entity_factory.h  entity_manager.c  entity_manager.h  main.c  sparse_set_storage.c  sparse_set_storage.h  storage_manager.c  storage_manager.h  world.c  world.h
ecs_core/: arena.c  arena.h  component_allocator.c  component_allocator.h  death_queue.c  death_queue.h  entity_manager.c  entity_manager.h  sparse_set_storage.c  sparse_set_storage.h  storage_manager.c  storage_manager.h
